examples/sample-project/force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <label>Invoice</label>
    <pluralLabel>Invoices</pluralLabel>
    <description>サンプル: 請求書。Order__c と Customer__c に紐づく。</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
        <displayFormat>INV-{0000}</displayFormat>
    </nameField>
</CustomObject>