examples/sample-project/force-app/main/default/objects/Invoice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
</CustomField>